--- a/discord.html
+++ b/discord.html
@@ -7,6 +7,6 @@
     <title>discord lol</title>
 </head>
 <body>
-    <meta http-equiv="Refresh" content="0; url='https://discord.io/Heroinnet'" />
+    <meta http-equiv="Refresh" content="0; url='https://discord.gg/a4BzhubYNZ'" />
 </body>
 </html>
